<resources>
    <string name="app_name">final-project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="wisata">Wisata</string>
    <string name="hotel">Hotel</string>
    <string name="favorit">Favorit</string>
    <string name="profil">Profil</string>
    <string name="lokasi_label">Lokasi :</string>
    <string name="cuaca_hari_ini">Cuaca Hari Ini</string>
    <string name="cerah">Cerah,</string>
    <string name="sungai">Sungai</string>
    <string name="event_terdekat">Event Terdekat</string>
    <string name="objek_wisata">Objek Wisata</string>
    <string name="cari_objek_wisata">Cari Objek Wisata</string>
    <string name="festival_budaya">Festival Budaya</string>
    <string name="kunjungi_web">Kunjungi Web</string>
    <string name="tentang_event">Tentang Event</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet</string>
    <string name="annotation_visit_web">Silakan kunjungi website untuk melihat harga tiket yang tersedia.</string>
    <string name="deskripsi_objek">Deskripsi Objek</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="cara_menuju_ke_tempat_wisata">Cara Menuju ke Tempat Wisata</string>
    <string name="rute_dan_transportasi">Rute dan Transportasi</string>
    <string name="how_to_route">Cara Menuju Tempat Wisata</string>
    <string name="waktu_tempuh">Waktu Tempuh</string>
    <string name="danau">Danau</string>
    <string name="pantai">Pantai</string>
    <string name="gua">Gua</string>
    <string name="air_terjun">Air Terjun</string>
    <string name="taman_national">Taman National</string>
</resources>