<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AreaBasedTourismActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_search_area_tourism"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/icon_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_bar_background"
            android:clipToOutline="true"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:hint="@string/cari_objek_wisata"
            android:lineSpacingExtra="6dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/chip_group_filter"
        app:layout_constraintTop_toBottomOf="@+id/tf_search_area_tourism"
        app:singleLine="true"
        android:layout_marginTop="16dp"
        android:isScrollContainer="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="Semua"
            android:layout_height="wrap_content"
            android:id="@+id/chip1"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/sungai"
            android:layout_height="wrap_content"
            android:id="@+id/chip2"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/danau"
            android:layout_height="wrap_content"
            android:id="@+id/chip3"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/pantai"
            android:layout_height="wrap_content"
            android:id="@+id/chip4"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/gua"
            android:layout_height="wrap_content"
            android:id="@+id/chip5"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/air_terjun"
            android:layout_height="wrap_content"
            android:id="@+id/chip6"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/taman_national"
            android:layout_height="wrap_content"
            android:id="@+id/chip7"
            />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_area_based_tourism"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>