<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/btn_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_close"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:text="@string/how_to_route"
        android:textColor="@color/text_grey_primary"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/iv_route_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_rute_transportasi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_title_route_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rute_dan_transportasi"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:textColor="@color/text_grey_primary"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/iv_route_information"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tv_detail_route_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_route_information"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_route_information"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/iv_time_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_waktu_tempuh"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_title_time_taken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waktu_tempuh"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:textColor="@color/text_grey_primary"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/iv_time_taken"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_time_taken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rute_dan_transportasi"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:textColor="@color/text_grey_secondary"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_time_taken"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_time_taken"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/iv_road_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_kondisi_jalan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_title_road_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waktu_tempuh"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:textColor="@color/text_grey_primary"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/iv_road_condition"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_road_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rute_dan_transportasi"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:textColor="@color/text_grey_secondary"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_road_condition"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_road_condition"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>