<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.DetailEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_event"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/dieng_culture_fest_detail"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_event_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dieng Culture Festival"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:textColor="@color/text_grey_primary"
            android:textSize="20sp"
            android:lineSpacingExtra="4sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_event"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_event_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:text="@string/festival_budaya"
            android:textColor="@color/text_grey_tertiary"
            android:textSize="14sp"
            android:lineSpacingExtra="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_detail_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_outline"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_detail_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:clipToOutline="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/icon_calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_label_event_detail_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:text="Tanggal Event :"
                    android:textSize="12sp"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:textColor="@color/text_grey_secondary"
                    app:layout_constraintBottom_toTopOf="@+id/tv_event_detail_date"
                    app:layout_constraintStart_toEndOf="@+id/iv_event_date"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_event_detail_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:text="02 September 2022"
                    android:textColor="@color/text_grey_primary"
                    android:textSize="14sp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_event_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_event_date">

                <ImageView
                    android:id="@+id/iv_event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/icon_pin_drop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_label_event_detail_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="10dp"
                    android:text="Lokasi Event :"
                    android:textSize="12sp"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:textColor="@color/text_grey_secondary"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_event_location" />

                <TextView
                    android:id="@+id/tv_event_detail_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:lineSpacingExtra="10dp"
                    android:text="Dieng Plateuau, Jawa Tengah"
                    android:textColor="@color/text_grey_primary"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_event_location"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_event_detail_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_visit_event_web"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kunjungi_web"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            app:icon="@drawable/icon_north_east"
            app:iconGravity="textEnd"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container" />

        <TextView
            android:id="@+id/label_about_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tentang_event"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:textColor="@color/text_grey_primary"
            android:textSize="16sp"
            android:lineSpacingExtra="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_visit_event_web"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_about_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text"
            android:textSize="14sp"
            android:lineSpacingExtra="10dp"
            android:textColor="@color/text_grey_secondary"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_about_event"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/container_annotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/search_bar_background"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_event">

            <TextView
                android:id="@+id/tv_annotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:text="@string/annotation_visit_web"
                android:textColor="@color/text_grey_secondary"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>